link gundamScript.js to index.html

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <body>
         <h1>GUNDAM MODEL LIST:</h1>
         <div id="gundam-models">
-            
+
         </div>
 
-
+        <script src="gundamScript.js"></script>
     </body>
 
 </html>
