--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
     <head>
         <title>GUNDAM API</title>
+        <link rel="stylesheet" href="gundamApi.css">
     </head>
 
     <body>
+        <button type="button" class="gundam-button">GENERATE GUNDAM</button>
         <h1>GUNDAM MODEL LIST:</h1>
         <div id="gundam-models">
 
