add background image, change h1 color

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <body>
         <button type="button" class="gundam-button">GENERATE GUNDAM</button>
-        <h1>GUNDAM MODEL LIST:</h1>
+        <h1 style="color: gold">GUNDAM MODEL LIST:</h1>
         <div id="gundam-models">
 
         </div>
