make change to db.json and index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         </div>
 
-        <script src="gundamScript.js"></script>
+        <script type="text/javascript" src="gundamScript.js"></script>
     </body>
 
 </html>
