add pictures, change background,output name of frames on page

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     </head>
 
     <body>
-        <button type="button" class="gundam-button">GENERATE GUNDAM</button>
-        <h1 style="color: gold">GUNDAM MODEL LIST:</h1>
-        <div id="gundam-models">
-
+        
+        
+        <div id="gundam-models" class="frameDiv">
+            <h1 style="color: gold">FRAMES:</h1>
         </div>
 
         <script type="text/javascript" src="gundamScript.js"></script>
